<resources>
    <string name="app_name">MariaJeanne</string>

    <string name="bottom_navigation_menu_home">Accueil</string>
    <string name="bottom_navigation_menu_search">Recherche</string>
    <string name="bottom_navigation_menu_favorite">Favori</string>
    <string name="activity_research_all">Toute les mariaJEANNE</string>
    <string name="activity_research_name">Nom</string>
    <string name="activity_research_race">Race</string>
    <string name="activity_research_effect">Effet</string>
    <string name="activity_research_flavour">Gout</string>
    <string name="activity_research_validate">Valider</string>
    <string name="main_title">Maria Jeanne</string>
    <string name="main_hint">Notre Herbe du Jour</string>
    <string name="main_text">Bienvenue sur notre application MariaJEANNE  Découvrez les meilleurs produits du terroir !</string>
    <string name="plant_name_favorite">Nom de la plante</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
