<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/bottom_navigation_menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/bottom_navigation_menu_favorite"
        app:showAsAction="ifRoom" />

</menu>